--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_Documento_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/_GridViewPartial_Documento_importacion.cshtml
@@ -62,7 +62,8 @@
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
             });
-        }); settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(30);
+        });
+        settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add("cb_Valor", "Valor").Width = Unit.Percentage(10);
 
 
