--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_Factura_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_Factura_importacion.cshtml
@@ -49,13 +49,37 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("Su_Descripcion", "Establecimiento").Width = Unit.Percentage(30);
-        settings.Columns.Add("IdBanco", "Id Banco").Width = Unit.Percentage(10);
-        settings.Columns.Add("ba_Tipo", "Tipo cuenta").Width = Unit.Percentage(20);
-        settings.Columns.Add("ba_Num_Cuenta", "Número de cuenta").Width = Unit.Percentage(10);
-        settings.Columns.Add("ba_num_digito_cheq", "Número de dígitos por cheque").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdCtaCble", "Cta contable").Width = Unit.Percentage(20);
+        settings.Columns.Add("Ruc", "RUC").Width = Unit.Percentage(10);
+        settings.Columns.Add("CodDocumentoTipo", "Documento").Width = Unit.Percentage(20);
+        settings.Columns.Add("sc_total", "Total").Width = Unit.Percentage(10);
+        settings.Columns.Add("sc_saldo", "Saldo").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "no_fecha";
+            column.Caption = "Fecha";
+            column.Width = Unit.Percentage(10);
+            column.PropertiesEdit.DisplayFormatString = "d";
+            column.EditorProperties().DateEdit(sp =>
+            {
+                column.PropertiesEdit.DisplayFormatString = "d";
+                sp.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "no_fecha_venc";
+            column.Caption = "Fecha vencimiento";
+            column.Width = Unit.Percentage(10);
+            column.PropertiesEdit.DisplayFormatString = "d";
+            column.EditorProperties().DateEdit(sp =>
+            {
+                column.PropertiesEdit.DisplayFormatString = "d";
+                sp.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add("sc_observacion", "Observación").Width = Unit.Percentage(20);
 
-       
+
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
