--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_Factura_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_Factura_importacion.cshtml
@@ -48,7 +48,7 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-        settings.Columns.Add("Su_Descripcion", "Establecimiento").Width = Unit.Percentage(30);
+        settings.Columns.Add("IdSucursal", "Establecimiento").Width = Unit.Percentage(30);
         settings.Columns.Add("Ruc", "RUC").Width = Unit.Percentage(10);
         settings.Columns.Add("CodDocumentoTipo", "Documento").Width = Unit.Percentage(20);
         settings.Columns.Add("sc_total", "Total").Width = Unit.Percentage(10);
