--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Nuevo.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.RRHH.ro_NominasPagosCheques_Info
+﻿@model Core.Erp.Info.RRHH.ro_SancionesPorMarcaciones_Info
 @{
-    ViewBag.Title = "Nueva pago";
+    ViewBag.Title = "Nueva control de marcaciones";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -17,7 +17,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Nuevo", "PagosEnCheques", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "ControlDeMarcaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTransaccion)
@@ -39,13 +39,7 @@
                     @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="FechaInicio">Periodo*</label>
-                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), new { @class = "form-control", @id = "IdPeriodo" })
-                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            
         </div>
     </div>
     <div class="row">
@@ -62,7 +56,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","PagosEnCheques",new { Area = "RRHH" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","ControlDeMarcaciones",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
