--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_Contrato_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_Contrato_importacion.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridViewPartial_Contrato_importacion";
         settings.CallbackRouteValues = new { Controller = "Empleado", Action = "GridViewPartial_Contrato_importacion" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdRubro";
+        settings.KeyFieldName = "IdContrato";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -48,44 +48,13 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-        settings.Columns.Add("IdRubro", "Codigo").Width = Unit.Percentage(5);
-        settings.Columns.Add("rub_codigo", "Descripción").Width = Unit.Percentage(16);
-        settings.Columns.Add("ru_codRolGen", "Cta Mejora").Width = Unit.Percentage(8);
-        settings.Columns.Add("ru_descripcion", "%").Width = Unit.Percentage(5);
-        settings.Columns.Add("NombreCorto", "Años").Width = Unit.Percentage(10);
-        settings.Columns.Add("rub_ctacon", "Cta Baja").Width = Unit.Percentage(8);
-        settings.Columns.Add("ru_tipo", "Cta Cble").Width = Unit.Percentage(8);
+        settings.Columns.Add("IdContrato", "Codigo").Width = Unit.Percentage(10);
+        settings.Columns.Add("contrato_tipo_descripcion", "Descripción").Width = Unit.Percentage(20);
+        settings.Columns.Add("FechaInicio", "Cta Mejora").Width = Unit.Percentage(10);
+        settings.Columns.Add("FechaFin", "%").Width = Unit.Percentage(10);
+        settings.Columns.Add("Sueldo", "Años").Width = Unit.Percentage(10);
+        settings.Columns.Add("nomina_tipo_descripcion", "Cta Baja").Width = Unit.Percentage(10);
 
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "rub_aplica_IESS";
-            column.Caption = "Aplica IESS";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(8);
-            column.EditorProperties().CheckBox(sp =>
-            {
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "rub_nocontab";
-            column.Caption = "Contabiliza";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(8);
-            column.EditorProperties().CheckBox(sp =>
-            {
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "rub_provision";
-            column.Caption = "Provisiona";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(8);
-            column.EditorProperties().CheckBox(sp =>
-            {
-
-            });
-        });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
