--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Modificar.cshtml
@@ -94,7 +94,7 @@
 @using (Html.BeginForm("Modificar", "ControlDeMarcaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdTransaccion)
+    @Html.HiddenFor(q => q.IdAjuste)
     @Html.HiddenFor(q => q.IdNomina_Tipo)
     @Html.HiddenFor(q => q.IdNomina_TipoLiqui)
     //@Html.HiddenFor(q => q.IdPeriodo)
