--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Anular.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.RRHH.ro_NominasPagosCheques_Info
+﻿@model Core.Erp.Info.RRHH.ro_SancionesPorMarcaciones_Info
 @{
     ViewBag.Title = "Anular pago";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -91,7 +91,7 @@
 
 </script>
 
-@using (Html.BeginForm("Anular", "PagosEnCheques", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Anular", "ControlDearcaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTransaccion)
@@ -140,7 +140,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index","PagosEnCheques",new { Area = "RRHH" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","ControlDearcaciones",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
