--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ControlDeMarcaciones/Nuevo.cshtml
@@ -17,7 +17,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Nuevo", "ControlDearcaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "ControlDeMarcaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdAjuste)
@@ -32,7 +32,7 @@
                 @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
             <div class="form-group">
                 <label for="Fecha">Buscar marcaciones desde*</label>
                 <div class="input-group date">
@@ -52,23 +52,25 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="Fecha">Hasta*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
+        <div class="col-md-12">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="Fecha">Hasta*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q=> q.FecaFin, settings =>
+                    {
+                        settings.Name = "FecaFin";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.FecaFin, "", new { @class = "text-danger" })
                     </div>
-                    @Html.DevExpress().DateEditFor(q=> q.FecaFin, settings =>
-                {
-                    settings.Name = "FecaFin";
-                    settings.Properties.UseMaskBehavior = true;
-                    settings.Properties.EditFormat = EditFormat.Date;
-                    settings.Properties.EditFormatString = "dd/MM/yyyy";
-                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                }).GetHtml()
-                    @Html.ValidationMessageFor(q => q.FecaFin, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -84,8 +86,7 @@
                     @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="col-md-12">
+            <div class="col-md-2">
                     <div class="form-group">
                         <label for="Fecha">Fecha para el descuento*</label>
                         <div class="input-group date">
@@ -103,7 +104,6 @@
                         }).GetHtml()
                             @Html.ValidationMessageFor(q => q.Fecha_Transac, "", new { @class = "text-danger" })
                         </div>
-                    </div>
                 </div>
             </div>
 
