--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_CmbRubro_EmpNov.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_CmbRubro_EmpNov.cshtml
@@ -23,7 +23,7 @@
 
     })
     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoNovedadController().get_list_bajo_demanda_rubro, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoNovedadController().get_info_bajo_demanda_rubro)
-    .Bind(Model.IdRubro);
+    .Bind(Model);
 
 }
 @comboBox.GetHtml()
